+corregido colores inputs para que sean más visibles. + Corregido bugaso que dejaba guardar una planilla vacía al editar y te tiraba mensaje que no te dejaba (pero sí  te dejaba por detrás, todo un pillín) + Corregido bug del edit que te decía "Requerido" al cargar la página en el input de período. +Detalles visuales menores.

--- a/SistemaRentabilidad/Content/Site.css
+++ b/SistemaRentabilidad/Content/Site.css
@@ -392,8 +392,6 @@ td.dataContainer {
 
 .positionOcultar {
     margin-left: 94%;
-    background-color: #ff695b;
-    background: darkcyan;
     color: white;
 }
 
